tests/fixtures/invalid/divmod_none_float.py
# Cannot call divmod() with None, Float
x = divmod(None, 1.0)
